# agents-monitor-schema

./: .env-example  .gitignore  .pre-commit-config.yaml  DEVELOPER.md  README.md  REF_DEV.md  config.yaml  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: agent-runner.yml
docs/api/: API.yaml  agents_monitor_schema.cli.cli.md  agents_monitor_schema.main.md  agents_monitor_schema.parsers.ocd_parser.md  agents_monitor_schema.parsers.openstates_parser.md  file_utils.md  path_utils.md
mkdocs_src/api/: cli.cli.md  main.md  parsers.ocd_parser.md  parsers.openstates_parser.md
parsers/: ocd_parser.py  openstates_parser.py
reports/2025-06-16/: 2025-06-16-change-report.yaml
reports/2025-06-17/: 2025-06-17-change-report.yaml
reports/2025-06-18/: 2025-06-18-change-report.yaml
reports/2025-06-19/: 2025-06-19-change-report.yaml
reports/2025-06-20/: 2025-06-20-change-report.yaml
reports/2025-06-21/: 2025-06-21-change-report.yaml
reports/2025-06-22/: 2025-06-22-change-report.yaml
reports/2025-06-23/: 2025-06-23-change-report.yaml
reports/2025-06-24/: 2025-06-24-change-report.yaml
reports/2025-06-25/: 2025-06-25-change-report.yaml
reports/2025-06-26/: 2025-06-26-change-report.yaml
reports/2025-06-27/: 2025-06-27-change-report.yaml
reports/2025-06-28/: 2025-06-28-change-report.yaml
reports/2025-06-29/: 2025-06-29-change-report.yaml
reports/2025-06-30/: 2025-06-30-change-report.yaml
reports/2025-07-01/: 2025-07-01-change-report.yaml
reports/2025-07-02/: 2025-07-02-change-report.yaml
src/agents_monitor_schema/: main.py
tests/: test_cli.py  test_main.py
(+50 files in other folders)
